<resources>
    <string name="app_name">VR公开课</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="r_agree_attenytion_email">* 注：验证码需要从发送的邮箱中获取</string>
    <string name="r_agree_attenytion_phone">* 注：验证码需要从发送的手机中获取</string>
    <string name="scanning_twocode_before">扫描二维码，您的朋友也可以下载</string>
    <string name="scanning_twocode_after">客户端</string>
    <string name="tip_battery">电量的状态</string>
    <string name="player_select_episode">选集</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="open_sign_fail">开启签到失败,请重新开启!</string>
    <string name="listview_footer_hint_loading">加载中…</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_doing_full">已加载全部</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="login">登录</string>
    <string name="password">请输入密码</string>
    <string name="password_dynamic">请输入动态密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="dynamic_password">使用动态密码登录</string>
    <string name="password_error">密码有误</string>
    <string name="password_error_text1">1、可能大小写没有区分，请正确输入</string>
    <string name="password_error_text2_before">2、如果忘记密码，请使用</string>
    <string name="password_error_text2_centre">找回密码</string>
    <string name="account_no">账号不存在</string>
    <string name="account_no_text1">1、请检查输入账号是否正确</string>
    <string name="account_no_text2">2、请检查账号是否是教务系统预留的手机或邮箱</string>
    <string name="account_no_text3_before">3、您可以新</string>
    <string name="account_no_text4">4、请联系本校管理员，手机：</string>
    <string name="password_dialog_ensure">确定</string>
    <string name="dialog_livelesson_prompt">提示</string>
    <string name="dialog_livelesson_abnormal">直播出现异常，请刷新当前页面或返回上一个页面</string>
    <string name="dialog_livelesson_otherequipment">当前您已经在另一个设备上播放此直播课</string>
    <string name="dialog_livelesson_oneequipment">同一直播课，只能在一台设备上播放</string>
    <string name="dialog_livelesson_cloes">直播间已经关闭</string>
    <string name="dialog_livelesson_numLimit">当前直播课观看人数已到达上限。</string>
    <string name="setting_changephonenumber_attention">* 注：新修改手机号可作为登录账号，之前的手机号将不能再继续使用。</string>
    <string name="setting_changeemailnumber_attention">* 注：新修改邮箱号可作为登录账号，之前的邮箱号将不能再继续使用。</string>
    <string name="setting_3g">3G/4G下载</string>
    <string name="notification_setting">通知设置</string>
    <string name="check_version_title">检查更新</string>
    <string name="clean_cache_title">清除缓存</string>
    <string name="dowload_address_text">下载位置</string>
    <string name="logout_title">退出</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="course_notify_send">课程相关消息推送</string>
    <string name="course_notify_send_des">关闭后不再接收作业、考试、回答等相关信息。</string>
    <string name="class_notify_send">班级相关消息推送</string>
    <string name="class_notify_send_des">关闭后不再接收话题、相册、文件共享等相关信息。</string>
    <string name="post_notify_send">海报相关消息推送</string>
    <string name="post_notify_send_des">关闭后不再接收点赞、评论、回复等相关信息。</string>
    <string name="shakesign_notify_send">签到通知推送</string>
    <string name="conversation_notify_send">会话推送</string>
    <string name="night_notify_send">夜间免打扰</string>
    <string name="night_notify_send_des">开启后，每日22:00至次日8:00将不推送消息。</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="here_no_course">当前没有课程</string>
    <string name="input_search_content">请输入关键词</string>
    <string name="no_examines">*请耐心等待老师批阅,批阅后可查看全部考试结果</string>
    <string name="score">总分：</string>
    <string name="loading">加载中...</string>
    <string name="question_type">题型</string>
    <string name="answer_success_topic">对错</string>
    <string name="all_score">得分</string>
    <string name="tag">标记</string>
    <string name="favorite">收藏</string>
    <string name="add_student_edit_hint">请输入学员账号（手机号或邮箱），每个学员之间用英文分号隔开。</string>
    <string name="net_inAvailable">请检查您的网络是否可用！</string>
    <string name="net_not_good">网络不好,请稍后在试！</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="shaoyishao">点击扫描签到二维码</string>
    <string name="sign_success">签到成功!</string>
    <string name="sign_complete">您已签到完成</string>
    <string name="sign_fail">签到失败!</string>
    <string name="sign_check">检测到签到信息,请确认签到!</string>
    <string name="no_sign_qrcode">非签到二维码,请重新扫码签到!</string>
     <string name="sign_offline">您当前为离线状态</string>
    <string name="remove_prompt">你已被移出本课程，如有疑问请联系授课老师</string>
    <string name="tab_normal">普通</string>
    <string name="tab_voice">声纹</string>
    <string name="site_class">现场上课</string>
    <string name="remote_class">远程上课</string>
    <string name="classroom_teaching">课堂授课</string>
    <string name="network_teaching">网络授课</string>
    <string name="sign_edit">签到编辑</string>
    <string name="classing">上课</string>
    <string name="after_class">下课</string>
    <string name="class_record">上课记录</string>
    <string name="class_way">上课方式</string>
    <string name="class_time">上课时长</string>
    <string name="right_now_class">立即下课</string>
    <string name="defer_class">推迟10分钟</string>
    <string name="class_score">课堂评分</string>
    <string name="already_score">已评分</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="my_app_name">@string/app_name</string>
    <string name="main_page">首页</string>
    <string name="main_classify">院系</string>
    <string name="main_find">发现</string>
    <string name="main_i">我</string>
    <string name="notification">通知</string>
    <string name="chat">聊天</string>
    <string name="chat_set">聊天设置</string>
    <string name="dele_cha">确定删除该会话吗？</string>
    <string name="ro_class">班级</string>
    <string name="sign_outline_remind">您的签到信息已记录,稍后会在您的网络通畅时提交。</string>
    <string name="create_course">创建课程</string>
    <string name="join_class">加入班级</string>
    <string name="im_tea">我是老师</string>
    <string name="im_stu">我是学生</string>
    <string name="optional_course">我的课程</string>
    <string name="self_course">我的自修课</string>
    <string name="boutique_course">本校精品课程</string>
    <string name="all_course">公开课联盟课程</string>
    <string name="shool_course">本校课程</string>
    <string name="shool_work">本校作业</string>
    <string name="all_work">公开课联盟作业</string>
    <string name="work">作业</string>
    <string name="exam">考试</string>
    <string name="stus">学员</string>
    <string name="record">上课记录</string>
    <string name="class_grade">点击对课堂进行评分</string>
    <string name="tea_class">授课班：</string>
    <string name="teaClass">授课班</string>
    <string name="ex_class">班级展开</string>
    <string name="up_class">收起班级</string>
    <string name="call">点名</string>
    <string name="courses">课程</string>
    <string name="course_hours">课时</string>
    <string name="live_coruse">直播课</string>
    <string name="live">直播</string>
    <string name="authentication">认证服务与就业服务</string>
    <string name="poster">海报</string>
    <string name="shool_news">院校新闻</string>
    <string name="myname">名字</string>
    <string name="balance">余额 ¥</string>
    <string name="gole">金币</string>
    <string name="my_tea_coruse">我的授课</string>
    <string name="my_coruse">我的课程</string>
    <string name="my_class">我的班级</string>
    <string name="my_service">我的服务</string>
    <string name="service">服务</string>
    <string name="my_posters">我的海报</string>
    <string name="my_gambits">我的话题</string>
    <string name="my_post_noti">已发通知</string>
    <string name="opinion">帮助与反馈</string>
    <string name="about_we">关于我们</string>
    <string name="sets">设置</string>
    <string name="share_twocode">分享二维码给好友</string>
    <string name="add_class">添加授课班</string>
    <string name="tea_class_name">授课班名称</string>
    <string name="tea_class_state">授课班状态</string>
    <string name="teaing">授课中</string>
    <string name="no_teaing">未授课</string>
    <string name="add_stus">添加学员</string>
    <string name="excel_import">Excel 导入授课班数据</string>
    <string name="select_class">请选择自然班级</string>
    <string name="move_class">授课班转移</string>
    <string name="tea_class_stus">授课班成员</string>
    <string name="course_detail">课程详情</string>
    <string name="add_tea_class">新增授课班</string>
    <string name="issue_course">发布课程</string>
    <string name="signin">签到</string>
    <string name="course_service">配套服务</string>
    <string name="course_introduce">课程简介</string>
    <string name="section">章节</string>
    <string name="chart">聊天</string>
    <string name="questions">问答</string>
    <string name="ask">提问</string>
    <string name="online_course">申请成为在教课程</string>
    <string name="course_tea">授课老师</string>
    <string name="add_course">立即报名</string>
    <string name="none_course">您还未加入课程!</string>
    <string name="ban_add_course">禁止加入该课程！</string>
    <string name="self_tea_course">本校授课</string>
    <string name="all_tea_course">公开课联盟授课</string>
    <string name="self_service">本校服务</string>
    <string name="all_service">公开课联盟服务</string>
    <string name="self_test">本校考试</string>
    <string name="all_text">公开课联盟考试</string>
    <string name="class_set">班级设置</string>
    <string name="class_introduce">班级简介</string>
    <string name="class_logo">班级LOGO</string>
    <string name="class_name">班级名称</string>
    <string name="enrol_year">入学年份</string>
    <string name="my_department">所属院系(专业)</string>
    <string name="my_department_hit">请选择所属专业(必选)</string>
    <string name="add_class_limit">加入班级限制</string>
    <string name="blackboard">黑板报</string>
    <string name="blackboard_hit">请输入班级黑板报描述200字以内（选填）</string>
    <string name="report">举报</string>
    <string name="num_five">5</string>
    <string name="delete">删除</string>
    <string name="video_end">/24:89</string>
    <string name="test_base">Android考试基础</string>
    <string name="test_begin_time">开始时间：2015-6-7</string>
    <string name="not_begin">未开始</string>
    <string name="do_work">做作业</string>
    <string name="check_test_result">查答案</string>
    <string name="goon_test">继续做</string>
    <string name="not_publish_result">未公布答案</string>
    <string name="test_over_time">答题超时</string>
    <string name="single_choice_type">单选题 </string>
    <string name="score_end">. (分)</string>
    <string name="get_auth_code_again">获取验证码</string>
    <string name="recover_question">恢复问题</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="input_phone_number">请输入11位手机号</string>
    <string name="input_verify">请输入验证码</string>
    <string name="verify">验证码</string>
    <string name="original_password">原密码</string>
    <string name="input_original_password">请输入原密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">设置新密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="input_affirm_password">请再次输入</string>
    <string name="new_phone_number">手机号</string>
</resources>