<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/view_titlepager"
        android:layout_width="match_parent"
        android:layout_height="46dip">

        <TextView
            android:id="@+id/question_type_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/single_choice_type"
            android:textColor="@color/font_black"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/allScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dip"
            android:layout_marginLeft="2dip"
            android:layout_toRightOf="@+id/question_type_tx"
            android:text="@string/score"
            android:textColor="@color/font_black"
            android:textSize="12dip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_five"
                android:textColor="@color/first_theme"
                android:textSize="30dip" />

            <TextView
                android:id="@+id/questionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_end"
                android:textColor="@color/black"
                android:textSize="12dip" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_titlepager_line"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/gray_line" />

    <TextView
        android:id="@+id/itemScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/score_end"
        android:textColor="@color/font_black"
        android:textSize="14dip" />

    <com.coder.kzxt.views.MyListView
        android:id="@+id/questionsTitleList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:cacheColorHint="@color/transparent"
        android:divider="@null"
        android:groupIndicator="@null"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/view_titlelinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:drawableLeft="@drawable/cance_tag"
            android:gravity="center_vertical"
            android:text="@string/tag"
            android:textColor="@color/first_theme"
            android:textSize="14dip" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dip"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:drawableLeft="@drawable/favorites"
            android:gravity="center_vertical"
            android:text="@string/favorite"
            android:textColor="@color/first_theme"
            android:visibility="gone"
            android:textSize="14dip" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dip"
        android:background="@color/gray_line" />

</LinearLayout>