<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/child_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/woying_10_dip"
        android:paddingLeft="@dimen/woying_6_dip"
        android:paddingRight="@dimen/woying_6_dip"
        android:paddingTop="@dimen/woying_10_dip">

        <TextView
            android:id="@+id/test_name_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/test_base"
            android:textColor="@color/font_black"
            android:textSize="@dimen/woying_15_dip"/>

        <TextView
            android:id="@+id/test_start_time_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_name_tx"
            android:layout_marginTop="@dimen/woying_12_dip"
            android:text="@string/test_begin_time"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/woying_11_dip" />

        <TextView
            android:id="@+id/test_end_time_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/test_name_tx"
            android:layout_marginLeft="@dimen/woying_10_dip"
            android:layout_marginTop="@dimen/woying_12_dip"
            android:layout_toRightOf="@+id/test_start_time_tx"
            android:text="@string/test_begin_time"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/woying_11_dip"/>

        <TextView
            android:id="@+id/test_no_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/bg_dark_gray"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/not_begin"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/test_homework_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/lan11_new"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/do_work"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/test_check_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/lan11_new"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/check_test_result"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/test_continue_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/lan11_new"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/goon_test"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/test_not_reported_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/bg_red"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/not_publish_result"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/test_timeout_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/bg_red"
            android:paddingBottom="@dimen/woying_3_dip"
            android:paddingLeft="@dimen/woying_12_dip"
            android:paddingRight="@dimen/woying_12_dip"
            android:paddingTop="@dimen/woying_3_dip"
            android:text="@string/test_over_time"
            android:textColor="@color/white"
            android:textSize="@dimen/woying_10_dip"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
