<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/back_up"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <TextView
        android:id="@+id/tv_describtion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/woying_10_dip"
        android:gravity="center_horizontal"
        android:textColor="@color/font_gray"
        android:textSize="@dimen/woying_14_dip" />

    <LinearLayout
        android:id="@+id/ll_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/change_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/woying_40_dip"
            android:layout_marginLeft="@dimen/woying_10_dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_phone_number"
                android:textColor="@color/sign_font_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/woying_10_dip"
                android:layout_toRightOf="@+id/tv_phone"
                android:background="@null"
                android:hint="@string/input_phone_number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:textColorHint="@color/password_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/woying_40_dip">

            <RelativeLayout
                android:id="@+id/rl_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/woying_40_dip"
                android:layout_marginLeft="@dimen/woying_10_dip"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    android:textColor="@color/sign_font_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/woying_10_dip"
                    android:layout_toRightOf="@+id/tv_verify"
                    android:background="@null"
                    android:hint="@string/input_verify"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColorHint="@color/password_color"
                    android:textSize="16sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_verify_code"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/woying_30_dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/woying_15_dip"
                android:background="@drawable/round_huang3_loginsetting"
                android:paddingLeft="@dimen/woying_10_dip"
                android:paddingRight="@dimen/woying_10_dip"
                android:text="@string/get_auth_code_again"
                android:textColor="@color/font_white"
                android:textSize="@dimen/woying_12_dip" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/woying_10_dip"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/woying_40_dip"
            android:layout_marginLeft="@dimen/woying_10_dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_original_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_password"
                android:textColor="@color/sign_font_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_original_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/woying_23_dip"
                android:layout_toRightOf="@+id/tv_original_password"
                android:background="@null"
                android:hint="@string/input_original_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/password_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:id="@+id/rl_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/woying_40_dip"
            android:layout_marginLeft="@dimen/woying_10_dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/sign_font_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/woying_23_dip"
                android:layout_toRightOf="@+id/tv_new_password"
                android:background="@null"
                android:hint="@string/input_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/password_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:id="@+id/rl_affirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/woying_40_dip"
            android:layout_marginLeft="@dimen/woying_10_dip"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_affirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affirm_password"
                android:textColor="@color/sign_font_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_affirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/woying_10_dip"
                android:layout_toRightOf="@+id/tv_affirm_password"
                android:background="@null"
                android:hint="@string/input_affirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/password_color"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/woying_20_dip"
        android:background="@drawable/round_huang3_loginsetting"
        android:text="@string/submit"
        android:textColor="@color/font_white"
        android:visibility="gone" />

</LinearLayout>